@@ -1,3 +1,4 @@
+- prevent garbaging text installer screen (#50776)
 - urpmq:
   o -a option was ignored when using --src (fixes #52672)
 - urpmi.addmedia:
